--- a/data_clean.ipynb
+++ b/data_clean.ipynb
@@ -2,20 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pickle\t\t\t\t\t\t# exports lists\n",
-    "\n",
+    "import pandas as pd\t\t\t\t\t# dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open ('data_profile', 'rb') as fp:\n",
-    "    data_profile = pickle.load(fp)\n",
-    "with open ('data_userlinks', 'rb') as fp:\n",
-    "    data_userlinks = pickle.load(fp)\n",
-    "with open ('data_storylinks', 'rb') as fp:\n",
-    "    data_storylinks = pickle.load(fp)"
+    "    data_profile = pickle.load(fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(data_profile)\n",
+    "df = df.join(df[4].apply(pd.Series))\n",
+    "del df[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['status'] = 'void'\n",
+    "df['status'][['reader' in row for row in df[1]]] = 'reader'\n",
+    "df['status'][['author' in row for row in df[1]]] = 'author'\n",
+    "del df[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns.values[range(0,3)] = ['id', 'country', 'join_date']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df.to_pickle(\"data_profile_table\")"
    ]
   }
  ],
