Added histograms for profile analysis

--- a/retrieve_sample.ipynb
+++ b/retrieve_sample.ipynb
@@ -10,6 +10,7 @@
    "source": [
     "# imports libaries\n",
     "import requests\t\t\t\t\t\t# HTTP connection\n",
+    "import timer\t\t\t\t\t\t# timer\n",
     "import re \t\t\t\t\t\t\t# regular expression\n",
     "import csv\t\t\t\t\t\t\t# csv writer\n",
     "import pickle\t\t\t\t\t\t# exports lists\n",
@@ -26,7 +27,7 @@
    "outputs": [],
    "source": [
     "# generates random sample of users\n",
-    "n = 500\n",
+    "n = 1000\n",
     "max_id = 9000000\n",
     "userids = np.random.randint(1, max_id, n)\n",
     "userids = np.unique(userids)\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -52,11 +53,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "t0 = time.time()\n",
+    "\n",
     "# collects data from user pages\n",
     "for i in range(0, n, 1):\n",
     "    \n",
@@ -68,9 +69,9 @@
     "    soup = BeautifulSoup(html, 'html.parser')\n",
     "    \n",
     "    # collects profile information\n",
-    "    desc = 'NaN'\n",
-    "    country = 'NaN'\n",
-    "    join = 'NaN'\n",
+    "    desc = 'NA'\n",
+    "    country = 'NA'\n",
+    "    join = 'NA'\n",
     "    desctag = soup.find('meta', {'name': 'description'})\n",
     "    countrytag = soup.find('img', {'height': '11', 'width': '16'})\n",
     "    jointag = soup.find(lambda tag: tag.name == 'span' and 'data-xutime' in tag.attrs)\n",
@@ -91,18 +92,20 @@
     "             soup.find_all(lambda tag: tag.name == 'a' and 'href' in tag.attrs)]\n",
     "      \n",
     "    # stores user links\n",
-    "    user = re.compile('/u/')\n",
+    "    user = re.compile('/u/(.+?)/')\n",
     "    userlinks = [re.search('/u/(.+?)/', link).group(1) \n",
     "                 for link in links if user.search(link) is not None]\n",
     "    userlinks = [userid, userlinks]\n",
     "    data_userlinks.append(userlinks)\n",
     "    \n",
     "    # stores story links\n",
-    "    story = re.compile('/s/')\n",
+    "    story = re.compile('/s/(.+?)/')\n",
     "    storylinks = [re.search('/s/(.+?)/', link).group(1) \n",
     "                 for link in links if story.search(link) is not None]\n",
     "    storylinks = [userid, storylinks]\n",
-    "    data_storylinks.append(storylinks)"
+    "    data_storylinks.append(storylinks)\n",
+    "    \n",
+    "time.time() - t0"
    ]
   },
   {
