Cleaned story sample

--- a/retrieve_story_sample.ipynb
+++ b/retrieve_story_sample.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -48,16 +48,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "527.4900076389313"
+       "681.3997538089752"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
     "            summary = summarytag.text\n",
     "            info = infotag.text\n",
     "        \n",
-    "    story = [storyid, userid, cat, title, summary, info]\n",
+    "    story = [storyid, userid, cat, title, summary, info, error]\n",
     "    data_stories.append(story)\n",
     "    \n",
     "time.time() - t0"
