Updated story analysis

--- a/profile_analysis.ipynb
+++ b/profile_analysis.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# imports libraries\n",
@@ -62,6 +64,13 @@
     "\n",
     "plt.xlim([int(np.min(entry_year)),16])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note the dip in 2002 and 2012 that coincides with the Great Fanfiction Purge of 2002 and 2012!"
    ]
   },
   {
@@ -442,7 +451,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# takes log transformation\n",
