Updated sample retrieval

--- a/retrieve_profile_sample.ipynb
+++ b/retrieve_profile_sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -10,9 +10,9 @@
    "source": [
     "# imports libaries\n",
     "import requests\t\t\t\t\t\t# HTTP connection\n",
+    "import random\t\t\t\t\t\t# random generator\n",
     "import time\t\t\t\t\t\t\t# timer\n",
     "import re \t\t\t\t\t\t\t# regular expression\n",
-    "import csv\t\t\t\t\t\t\t# csv writer\n",
     "import pickle\t\t\t\t\t\t# exports lists\n",
     "import numpy as np\t\t\t\t\t# numerical computation\n",
     "from bs4 import BeautifulSoup\t\t# web scraping"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -29,11 +29,9 @@
     "# generates random sample of users\n",
     "n = 10000\n",
     "max_id = 9000000\n",
-    "userids = np.random.randint(1, max_id, n)\n",
-    "userids = np.unique(userids)\n",
-    "userids = [str(userid) for userid in userids]\n",
+    "userids = random.sample(range(1, max_id), n)\n",
     "baselink = 'https://www.fanfiction.net/u/'\n",
-    "urls = [baselink + userid for userid in userids]"
+    "urls = [baselink + str(userid) for userid in userids]"
    ]
   },
   {
@@ -65,6 +63,14 @@
     "    userid = userids[i]\n",
     "\n",
     "    # collects data from webpage\n",
+    "    page = ''\n",
+    "    while page == '':\n",
+    "        try:\n",
+    "            page = requests.get(urls[i])\n",
+    "        except:\n",
+    "            print(\"Connection refused, going to sleep...\")\n",
+    "            time.sleep(5)\n",
+    "            continue\n",
     "    html = requests.get(urls[i]).text\n",
     "    soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
@@ -77,6 +83,7 @@
     "    desctag = soup.find('meta', {'name': 'description'})\n",
     "    countrytag = soup.find('img', {'height': '11', 'width': '16'})\n",
     "    jointag = soup.find(lambda tag: tag.name == 'span' and 'data-xutime' in tag.attrs)\n",
+    "    \n",
     "    if desctag is not None:\n",
     "        desc = desctag['content']\n",
     "    if countrytag is not None:\n",
@@ -109,12 +116,12 @@
     "    storylinks = [userid, storylinks]\n",
     "    data_storylinks.append(storylinks)\n",
     "    \n",
-    "time.time() - t0"
+    "print(time.time() - t0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
