--- a/story_clean.ipynb
+++ b/story_clean.ipynb
@@ -146,7 +146,8 @@
    "outputs": [],
    "source": [
     "# retrieves characters\n",
-    "ischaracter = [type(row) is list and ': ' not in row[0] for row in df['info']]\n",
+    "ischaracter = [type(row) is list and 'Chapters: ' not in row[0] and 'Words: ' not in row[0]\n",
+    "                                      for row in df['info']]\n",
     "df['characters'] = 'NA'\n",
     "a = [row[0] for row in df.loc[ischaracter, 'info']]\n",
     "df.loc[ischaracter, 'characters'] = a\n",
