Updated story clean and analysis

--- a/story_clean.ipynb
+++ b/story_clean.ipynb
@@ -36,9 +36,8 @@
    },
    "outputs": [],
    "source": [
-    "# converts to dataframe\n",
-    "df = pd.DataFrame(data_stories)\n",
-    "df.columns = ['storyid', 'userid', 'cat', 'title', 'summary', 'info', 'error']"
+    "# sets current year\n",
+    "cyear = str(datetime.datetime.now().year)"
    ]
   },
   {
@@ -49,15 +48,40 @@
    },
    "outputs": [],
    "source": [
-    "# finds userid from link\n",
-    "uid = re.compile(\"=(.*)$\")\n",
-    "df.loc[df.userid != 'NA', 'userid'] = [uid.search(row).group(1) \n",
-    "                                       for row in df.loc[df.userid != 'NA', 'userid']]"
+    "# converts to dataframe\n",
+    "df = pd.DataFrame(data_stories)\n",
+    "df.columns = ['storyid', 'userid', 'cat', 'title', 'summary', 'info', 'error']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# indexes online stories\n",
+    "isonline = df.userid != 'NA'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# finds userid from link\n",
+    "uid = re.compile(\"=(.*)$\")\n",
+    "df.loc[isonline, 'userid'] = [uid.search(row).group(1) \n",
+    "                              for row in df.loc[isonline, 'userid']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -77,47 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# splits info\n",
-    "df.loc[df.userid != 'NA', 'info'] = [row.split(' - ') \n",
-    "                                     for row in df.loc[df.userid != 'NA', 'info']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# retrieves rated\n",
-    "df['rated'] = 'NA'\n",
-    "df.loc[df.userid != 'NA', 'rated'] = [re.sub('Rated: Fiction  ', '', row[0])\n",
-    "                                     for row in df.loc[df.userid != 'NA', 'info']]\n",
-    "df.loc[df.userid != 'NA', 'info'] = [row[1:]\n",
-    "                                     for row in df.loc[df.userid != 'NA', 'info']]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# retrieves language\n",
-    "df['language'] = 'NA'\n",
-    "df.loc[df.userid != 'NA', 'language'] = [row[0]\n",
-    "                                     for row in df.loc[df.userid != 'NA', 'info']]\n",
-    "df.loc[df.userid != 'NA', 'info'] = [row[1:]\n",
-    "                                     for row in df.loc[df.userid != 'NA', 'info']]"
+    "# splits info\n",
+    "df.loc[isonline, 'info'] = [row.split(' - ') for row in df.loc[isonline, 'info']]\n",
+    "info_columns = ['rated', 'language', 'genre', 'characters', 'chapters', 'words',\n",
+    "               'reviews', 'favs', 'follows', 'updated', 'published', 'status']\n",
+    "for info_col in info_columns:\n",
+    "    df[info_col] = 'NA'"
    ]
   },
   {
@@ -128,13 +123,10 @@
    },
    "outputs": [],
    "source": [
-    "# retrieves genre\n",
-    "isgenre = [type(row) is list and ': ' not in row[0] and row[0][0] != ' ' for row in df['info']]\n",
-    "df['genre'] = 'NA'\n",
-    "df.loc[isgenre, 'genre'] = [row[0]\n",
-    "                            for row in df.loc[isgenre, 'info']]\n",
-    "df.loc[isgenre, 'info'] = [row[1:]\n",
-    "                            for row in df.loc[isgenre, 'info']]"
+    "# retrieves rated\n",
+    "df.loc[isonline, 'rated'] = [re.sub('Rated: Fiction  ', '', row[0])\n",
+    "                             for row in df.loc[isonline, 'info']]\n",
+    "df.loc[isonline, 'info'] = [row[1:] for row in df.loc[isonline, 'info']]"
    ]
   },
   {
@@ -145,21 +137,9 @@
    },
    "outputs": [],
    "source": [
-    "# retrieves characters\n",
-    "ischaracter = [type(row) is list and 'Chapters: ' not in row[0] and 'Words: ' not in row[0]\n",
-    "                                      for row in df['info']]\n",
-    "df['characters'] = 'NA'\n",
-    "a = [row[0] for row in df.loc[ischaracter, 'info']]\n",
-    "df.loc[ischaracter, 'characters'] = a\n",
-    "df.loc[ischaracter, 'info'] = [row[1:]\n",
-    "                            for row in df.loc[ischaracter, 'info']]\n",
-    "\n",
-    "# if hyphen in character's name (rare)\n",
-    "ischaracter = [type(row) is list and ': ' not in row[0] for row in df['info']]\n",
-    "b = [row[0] for row in df.loc[ischaracter, 'info']]\n",
-    "df.loc[ischaracter, 'characters'] = [m+n for m,n in zip(a,b)]\n",
-    "df.loc[ischaracter, 'info'] = [row[1:]\n",
-    "                            for row in df.loc[ischaracter, 'info']]"
+    "# retrieves language\n",
+    "df.loc[isonline, 'language'] = [row[0] for row in df.loc[isonline, 'info']]\n",
+    "df.loc[isonline, 'info'] = [row[1:] for row in df.loc[isonline, 'info']]"
    ]
   },
   {
@@ -170,13 +150,19 @@
    },
    "outputs": [],
    "source": [
-    "# retrieves chapters\n",
-    "ischapter = [type(row) is list and 'Chapters' in row[0] for row in df['info']]\n",
-    "df['chapters'] = 'NA'\n",
-    "df.loc[ischapter, 'chapters'] = [re.sub(\"\\D\", \"\", row[0])\n",
-    "                            for row in df.loc[ischapter, 'info']]\n",
-    "df.loc[ischapter, 'info'] = [row[1:]\n",
-    "                            for row in df.loc[ischapter, 'info']]"
+    "# retrieves genre\n",
+    "df.loc[isonline, 'genre'] = 'General'\n",
+    "isgenre = [type(row) is list and ': ' not in row[0] and row[0][0] != ' ' \n",
+    "           for row in df['info']]\n",
+    "df.loc[isgenre, 'genre'] = [row[0] for row in df.loc[isgenre, 'info']]\n",
+    "df.loc[isgenre, 'info'] = [row[1:] for row in df.loc[isgenre, 'info']]\n",
+    "\n",
+    "# splits genres\n",
+    "df['genre'] = [re.sub('Hurt/Comfort', 'Hurt-Comfort', row)\n",
+    "                      for row in df['genre']]\n",
+    "df['genre'] = [re.sub(' ', '', row)\n",
+    "                      for row in df['genre']]\n",
+    "df['genre'] = [row.split('/') for row in df['genre']]"
    ]
   },
   {
@@ -187,13 +173,23 @@
    },
    "outputs": [],
    "source": [
-    "# retrieves words\n",
-    "iswords = [type(row) is list for row in df['info']]\n",
-    "df['words'] = 'NA'\n",
-    "df.loc[iswords, 'words'] = [re.sub(\"\\D\", \"\", row[0])\n",
-    "                            for row in df.loc[iswords, 'info']]\n",
-    "df.loc[iswords, 'info'] = [row[1:]\n",
-    "                            for row in df.loc[iswords, 'info']]"
+    "# retrieves characters\n",
+    "ischaracter = [type(row) is list \n",
+    "               and 'Chapters: ' not in row[0] and 'Words: ' not in row[0]\n",
+    "               for row in df['info']]\n",
+    "df.loc[ischaracter, 'characters'] = [row[0] for row in df.loc[ischaracter, 'info']]\n",
+    "df.loc[ischaracter, 'info'] = [row[1:] for row in df.loc[ischaracter, 'info']]\n",
+    "\n",
+    "# appends characters in case splitted\n",
+    "while sum(ischaracter) > 0:\n",
+    "    ischaracter = [type(row) is list \n",
+    "                   and 'Chapters: ' not in row[0] and 'Words: ' not in row[0]\n",
+    "                   for row in df['info']]\n",
+    "    a = df.loc[ischaracter, 'characters']\n",
+    "    b = [row[0] for row in df.loc[ischaracter, 'info']]\n",
+    "    df.loc[ischaracter, 'characters'] = [m+n for m,n in zip(a,b)]\n",
+    "    df.loc[ischaracter, 'info'] = [row[1:]\n",
+    "                                   for row in df.loc[ischaracter, 'info']]"
    ]
   },
   {
@@ -204,13 +200,12 @@
    },
    "outputs": [],
    "source": [
-    "# retrieves reviews\n",
-    "isreviews = [type(row) is list and 'Reviews' in row[0] for row in df['info']]\n",
-    "df['reviews'] = 'NA'\n",
-    "df.loc[isreviews, 'reviews'] = [re.sub(\"\\D\", \"\", row[0])\n",
-    "                            for row in df.loc[isreviews, 'info']]\n",
-    "df.loc[isreviews, 'info'] = [row[1:]\n",
-    "                            for row in df.loc[isreviews, 'info']]"
+    "# retrieves chapters\n",
+    "ischapter = [type(row) is list and 'Chapters' in row[0] for row in df['info']]\n",
+    "df.loc[ischapter, 'chapters'] = [re.sub(\"\\D\", \"\", row[0])\n",
+    "                            for row in df.loc[ischapter, 'info']]\n",
+    "df.loc[ischapter, 'info'] = [row[1:]\n",
+    "                            for row in df.loc[ischapter, 'info']]"
    ]
   },
   {
@@ -221,13 +216,12 @@
    },
    "outputs": [],
    "source": [
-    "# retrieves favs\n",
-    "isfavs = [type(row) is list and 'Favs' in row[0] for row in df['info']]\n",
-    "df['favs'] = 'NA'\n",
-    "df.loc[isfavs, 'favs'] = [re.sub(\"\\D\", \"\", row[0])\n",
-    "                            for row in df.loc[isfavs, 'info']]\n",
-    "df.loc[isfavs, 'info'] = [row[1:]\n",
-    "                            for row in df.loc[isfavs, 'info']]"
+    "# retrieves words\n",
+    "iswords = [type(row) is list for row in df['info']]\n",
+    "df.loc[iswords, 'words'] = [re.sub(\"\\D\", \"\", row[0])\n",
+    "                            for row in df.loc[iswords, 'info']]\n",
+    "df.loc[iswords, 'info'] = [row[1:]\n",
+    "                            for row in df.loc[iswords, 'info']]"
    ]
   },
   {
@@ -238,13 +232,12 @@
    },
    "outputs": [],
    "source": [
-    "# retrieves follows\n",
-    "isfollows = [type(row) is list and 'Follows' in row[0] for row in df['info']]\n",
-    "df['follows'] = 'NA'\n",
-    "df.loc[isfollows, 'follows'] = [re.sub(\"\\D\", \"\", row[0])\n",
-    "                            for row in df.loc[isfollows, 'info']]\n",
-    "df.loc[isfollows, 'info'] = [row[1:]\n",
-    "                            for row in df.loc[isfollows, 'info']]"
+    "# retrieves reviews\n",
+    "isreviews = [type(row) is list and 'Reviews' in row[0] for row in df['info']]\n",
+    "df.loc[isreviews, 'reviews'] = [re.sub(\"\\D\", \"\", row[0])\n",
+    "                            for row in df.loc[isreviews, 'info']]\n",
+    "df.loc[isreviews, 'info'] = [row[1:]\n",
+    "                            for row in df.loc[isreviews, 'info']]"
    ]
   },
   {
@@ -255,13 +248,12 @@
    },
    "outputs": [],
    "source": [
-    "# retrieves updated\n",
-    "isupdated = [type(row) is list and 'Updated' in row[0] for row in df['info']]\n",
-    "df['updated'] = 'NA'\n",
-    "df.loc[isupdated, 'updated'] = [re.sub('Updated: ', '', row[0])\n",
-    "                            for row in df.loc[isupdated, 'info']]\n",
-    "df.loc[isupdated, 'info'] = [row[1:]\n",
-    "                            for row in df.loc[isupdated, 'info']]"
+    "# retrieves favs\n",
+    "isfavs = [type(row) is list and 'Favs' in row[0] for row in df['info']]\n",
+    "df.loc[isfavs, 'favs'] = [re.sub(\"\\D\", \"\", row[0])\n",
+    "                            for row in df.loc[isfavs, 'info']]\n",
+    "df.loc[isfavs, 'info'] = [row[1:]\n",
+    "                            for row in df.loc[isfavs, 'info']]"
    ]
   },
   {
@@ -272,13 +264,12 @@
    },
    "outputs": [],
    "source": [
-    "# retrieves published\n",
-    "ispublished = [type(row) is list and 'Published' in row[0] for row in df['info']]\n",
-    "df['published'] = 'NA'\n",
-    "df.loc[ispublished, 'published'] = [re.sub('Published: ', '', row[0])\n",
-    "                            for row in df.loc[ispublished, 'info']]\n",
-    "df.loc[ispublished, 'info'] = [row[1:]\n",
-    "                            for row in df.loc[ispublished, 'info']]"
+    "# retrieves follows\n",
+    "isfollows = [type(row) is list and 'Follows' in row[0] for row in df['info']]\n",
+    "df.loc[isfollows, 'follows'] = [re.sub(\"\\D\", \"\", row[0])\n",
+    "                            for row in df.loc[isfollows, 'info']]\n",
+    "df.loc[isfollows, 'info'] = [row[1:]\n",
+    "                            for row in df.loc[isfollows, 'info']]"
    ]
   },
   {
@@ -289,12 +280,12 @@
    },
    "outputs": [],
    "source": [
-    "# retrieves status\n",
-    "isstatus = [type(row) is list and 'Status' in row[0] for row in df['info']]\n",
-    "df['status'] = 'NA'\n",
-    "df.loc[df.userid != 'NA', 'status'] = 'Incomplete'\n",
-    "df.loc[isstatus, 'status'] = [re.sub('Status: ', '', row[0])\n",
-    "                              for row in df.loc[isstatus, 'info']]"
+    "# retrieves updated\n",
+    "isupdated = [type(row) is list and 'Updated' in row[0] for row in df['info']]\n",
+    "df.loc[isupdated, 'updated'] = [re.sub('Updated: ', '', row[0])\n",
+    "                            for row in df.loc[isupdated, 'info']]\n",
+    "df.loc[isupdated, 'info'] = [row[1:]\n",
+    "                            for row in df.loc[isupdated, 'info']]"
    ]
   },
   {
@@ -305,12 +296,43 @@
    },
    "outputs": [],
    "source": [
-    "del df['info']"
+    "# retrieves published\n",
+    "ispublished = [type(row) is list and 'Published' in row[0] for row in df['info']]\n",
+    "df.loc[ispublished, 'published'] = [re.sub('Published: ', '', row[0])\n",
+    "                            for row in df.loc[ispublished, 'info']]\n",
+    "df.loc[ispublished, 'info'] = [row[1:]\n",
+    "                            for row in df.loc[ispublished, 'info']]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# retrieves status\n",
+    "isstatus = [type(row) is list and 'Status' in row[0] for row in df['info']]\n",
+    "df.loc[df.userid != 'NA', 'status'] = 'Incomplete'\n",
+    "df.loc[isstatus, 'status'] = [re.sub('Status: ', '', row[0])\n",
+    "                              for row in df.loc[isstatus, 'info']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "del df['info']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -324,14 +346,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# formats published dates\n",
-    "cyear = str(datetime.datetime.now().year)\n",
     "pub_date = df.loc[df.published != 'NA', 'published']\n",
     "pub_date = [row.split('/') for row in pub_date]\n",
     "df.loc[df.published != 'NA', 'published'] = pub_date\n",
@@ -342,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -359,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -375,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
