--- a/story_analysis.ipynb
+++ b/story_analysis.ipynb
@@ -24,7 +24,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# imports libraries\n",
@@ -44,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# opens cleaned data\n",
@@ -432,7 +436,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_online['top_fandom'] = df_online['fandom']\n",
@@ -799,87 +805,6 @@
     "plt.xlim(0,50)\n",
     "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0      279\n",
-       "2.0      250\n",
-       "0.0      211\n",
-       "3.0      208\n",
-       "4.0      182\n",
-       "6.0      158\n",
-       "5.0      157\n",
-       "7.0      118\n",
-       "8.0      112\n",
-       "10.0      80\n",
-       "9.0       77\n",
-       "11.0      72\n",
-       "12.0      61\n",
-       "13.0      50\n",
-       "14.0      47\n",
-       "15.0      39\n",
-       "16.0      37\n",
-       "17.0      35\n",
-       "19.0      32\n",
-       "18.0      29\n",
-       "20.0      27\n",
-       "26.0      24\n",
-       "21.0      23\n",
-       "24.0      21\n",
-       "31.0      16\n",
-       "27.0      16\n",
-       "22.0      14\n",
-       "23.0      13\n",
-       "30.0      13\n",
-       "28.0      13\n",
-       "        ... \n",
-       "222.0      1\n",
-       "109.0      1\n",
-       "158.0      1\n",
-       "217.0      1\n",
-       "206.0      1\n",
-       "310.0      1\n",
-       "565.0      1\n",
-       "475.0      1\n",
-       "229.0      1\n",
-       "193.0      1\n",
-       "334.0      1\n",
-       "77.0       1\n",
-       "75.0       1\n",
-       "513.0      1\n",
-       "350.0      1\n",
-       "82.0       1\n",
-       "118.0      1\n",
-       "204.0      1\n",
-       "260.0      1\n",
-       "197.0      1\n",
-       "97.0       1\n",
-       "377.0      1\n",
-       "333.0      1\n",
-       "277.0      1\n",
-       "383.0      1\n",
-       "410.0      1\n",
-       "199.0      1\n",
-       "498.0      1\n",
-       "878.0      1\n",
-       "95.0       1\n",
-       "Name: reviews, Length: 192, dtype: int64"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_online.reviews.fillna(0).value_counts()"
    ]
   },
   {
