--- a/notebooks/story_analysis.ipynb
+++ b/notebooks/story_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -19,12 +19,12 @@
     "import seaborn as sns\t\t\t\t\t\t\t\t# graphics supplemental\n",
     "from scipy.stats import chisquare\t\t\t\t\t# chi-squared\n",
     "from nltk.corpus import stopwords\t\t\t\t\t# stop words\n",
-    "from IPython.core.display import display, HTML\t\t"
+    "from IPython.core.display import display, HTML\t\t# display HTML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -52,21 +52,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fanfiction Story Analysis"
+    "# Story Analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, we take a sample of ~5000 stories from fanfiction.net and break down some of their characteristics. Then using all available data from the site, we try to make predictions on the number of reviews a story is expected to have given select features. These predicted values can be used as benchmarks to see whether stories are overperforming or underperforming relative to their peers."
+    "In this section, we take a sample of ~5000 stories from fanfiction.net and break down some of their characteristics."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data exploration"
+    "## Activity and volume"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's examine the volume of stories published across time."
+    "Now let's examine the volume of stories published across time (that have survived on the site)."
    ]
   },
   {
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Genres"
+    "## Genres"
    ]
   },
   {
@@ -269,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ratings"
+    "## Ratings"
    ]
   },
   {
@@ -356,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Media and fandoms"
+    "## Media and fandoms"
    ]
   },
   {
@@ -499,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Word count, chapter length and completion status"
+    "## Word count, chapter length and completion status"
    ]
   },
   {
@@ -666,7 +666,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Publication timing"
+    "## Publication timing"
    ]
   },
   {
@@ -806,7 +806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Titles and summaries"
+    "## Titles and summaries"
    ]
   },
   {
@@ -1094,26 +1094,6 @@
     "attributes = 'Not Harry Potter - Rated: T - English - Romance/Humor - Words: 8,290 - Published: Dec 22, 2013'\n",
     "\n",
     "display(HTML('<a href>' + title + '</a><br>' + summary + '<br><span style=\"color:grey\">' + attributes + '</body>'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "IPython.core.display.HTML"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(HTML('<a href>' + title + '</a><br>' + summary + '<br><span style=\"color:grey\">' + attributes + '</body>'))"
    ]
   }
  ],
