--- a/notebooks/story_analysis.ipynb
+++ b/notebooks/story_analysis.ipynb
@@ -905,7 +905,7 @@
     }
    ],
    "source": [
-    "# examines word/character count of titles\n",
+    "# examines word/character count of summaries\n",
     "summary_cc = [len(row) for row in df_online['summary']]\n",
     "summary_wc = [len(row.split()) for row in df_online['summary']]\n",
     "\n",
