--- a/notebooks/profile_clean.ipynb
+++ b/notebooks/profile_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -38,12 +38,12 @@
    "source": [
     "# converts to dataframe\n",
     "df = pd.DataFrame(data_profile)\n",
-    "df.columns = ['id', 'desc', 'country', 'join_date', 'tabs']"
+    "df.columns = ['id', 'desc', 'country', 'join_date', 'profile', 'tabs']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -74,89 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0               NA\n",
-       "1               NA\n",
-       "2               NA\n",
-       "3               NA\n",
-       "4               NA\n",
-       "5               NA\n",
-       "6       10/15/1999\n",
-       "7         2/2/2000\n",
-       "8        2/13/2015\n",
-       "9        2/13/2000\n",
-       "10              NA\n",
-       "11        06-10-09\n",
-       "12        01-29-00\n",
-       "13        02-04-00\n",
-       "14        03-02-00\n",
-       "15        03-08-00\n",
-       "16        04-05-00\n",
-       "17        04-17-00\n",
-       "18        05-12-00\n",
-       "19        05-27-00\n",
-       "20        06-12-00\n",
-       "21        07-09-00\n",
-       "22              NA\n",
-       "23        07-10-00\n",
-       "24        07-11-00\n",
-       "25        07-17-00\n",
-       "26        07-23-00\n",
-       "27        08-22-00\n",
-       "28        08-23-00\n",
-       "29        10-01-00\n",
-       "           ...    \n",
-       "7292      02-27-15\n",
-       "7293      02-27-15\n",
-       "7294      02-27-15\n",
-       "7295      02-28-15\n",
-       "7296      02-28-15\n",
-       "7297      02-28-15\n",
-       "7298      03-01-15\n",
-       "7299      03-01-15\n",
-       "7300      03-01-15\n",
-       "7301      03-01-15\n",
-       "7302      03-02-15\n",
-       "7303      03-02-15\n",
-       "7304      03-02-15\n",
-       "7305      03-02-15\n",
-       "7306      03-02-15\n",
-       "7307      03-02-15\n",
-       "7308      03-03-15\n",
-       "7309      03-03-15\n",
-       "7310      03-03-15\n",
-       "7311      03-04-15\n",
-       "7312      03-04-15\n",
-       "7313      03-04-15\n",
-       "7314      03-04-15\n",
-       "7315      03-05-15\n",
-       "7316      03-05-15\n",
-       "7317      03-06-15\n",
-       "7318      03-06-15\n",
-       "7319      03-06-15\n",
-       "7320      03-06-15\n",
-       "7321      03-06-15\n",
-       "Name: join_date, Length: 7322, dtype: object"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['join_date']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# parses date column\n",
@@ -176,6 +97,16 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parses profile\n",
+    "df['profile'] = [' '.join(row) for row in df['profile']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
