Updated regressions in R

--- a/jupyter_notebooks/profile_performance.ipynb
+++ b/jupyter_notebooks/profile_performance.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "Logistic regression lets us predict the probability that variable is (or is not) something. The model is as follows:\n",
     "\n",
-    "$Pr(Y_i=1) = \\dfrac{1}{1-e^{-(\\beta_0 + \\beta_1 X_{i1} + \\beta_2 X_{i2} + ... + \\beta_k X_{ik} + \\epsilon_i)}}$\n",
+    "$Pr(Y_i=1) = \\dfrac{1}{1+e^{-(\\beta_0 + \\beta_1 X_{i1} + \\beta_2 X_{i2} + ... + \\beta_k X_{ik} + \\epsilon_i)}}$\n",
     "\n",
     "in which $Y_i$ is $i$th observation of the dependent variable (variable of interest), and $X_{ij}$ is the $i$th observation of the $j$th independent variable.\n",
     "\n",
