--- a/jupyter_notebooks/profile_performance.ipynb
+++ b/jupyter_notebooks/profile_performance.ipynb
@@ -34,36 +34,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# opens raw data\n",
-    "with open ('../data/clean_data/df_profile', 'rb') as fp:\n",
-    "    df = pickle.load(fp)\n",
-    "\n",
-    "# sets current year\n",
-    "cyear = datetime.datetime.now().year\n",
-    "\n",
-    "# creates isauthor variable\n",
-    "df['isauthor'] = [row > 0 for row in df['st']]\n",
-    "\n",
-    "# creates tenure variable\n",
-    "df['tenure'] = 'NA'\n",
-    "hasyear = [len(row) > 2 and row[2] != 'NA' for row in df['join']]\n",
-    "df.loc[hasyear, 'tenure'] = [cyear - int(row[2]) for row in df.loc[hasyear, 'join']]\n",
-    "\n",
-    "# turns cc into binary\n",
-    "df.loc[df['cc'] > 0, 'cc'] = 1\n",
-    "\n",
-    "# creates hasprofile variable\n",
-    "df['hasprofile'] = [len(row) > 0 for row in df['profile']]\n",
-    "\n",
-    "df.to_csv('../data/clean_data/df_profile.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "collapsed": true
@@ -132,15 +102,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -151,7 +112,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multicollinearity"
+    "##\n",
+    "# Multicollinearity"
    ]
   },
   {
