Updated reg script

--- a/jupyter_notebooks/profile_predict.ipynb
+++ b/jupyter_notebooks/profile_predict.ipynb
@@ -105,6 +105,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Blind guess"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Before introducing any type of model, we can already see from our sample data that out of all active users, only ~18% of them are authors. As such, if we simply guess \"not author\" for all users, we will be correct ~82% of the time. Our goal is to come up with a classification method that has greater accuracy."
    ]
   },
@@ -138,6 +145,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Logit model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The first approach that we will try is the logit model, or logistic regression, as explained above."
    ]
   },
@@ -161,7 +175,23 @@
     "One more characteristic that we would also like to later include, but have not retrieved yet the data for:\n",
     "* whether or not they have signed a review\n",
     "\n",
-    "The reasoning behind these variables is simple -- we assume that the longer and more involved an user is on the site, the more likely they are to publish."
+    "The reasoning behind these variables is simple -- we assume that the longer and more involved an user is on the site, the more likely they are to publish.\n",
+    "\n",
+    "From there, we randomly split up our data into two subsets: one to used as training (to build our model), and one to be used as testing (to test the accuracy of the model we built)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model produced by the training data has statistically significant positive $\\beta$ coefficients for all our explanatory variables. This is the relationship we expected. However, when we use our model to predict the testing set, we achieve only ~86% accuracy. This is an improvement from blind guessing, but only slightly."
    ]
   },
   {
